--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
-    "react-fontawesome": "^1.4.0"
+    "react-fontawesome": "^1.4.0",
+    "react-modal": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
