--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "babel-preset-stage-2": "^6.18.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-react": "^6.7.1",
     "react-scripts": "0.7.0",
