--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "tachyons": "^4.5.5"
   },
   "dependencies": {
+    "chart.js": "^1.1.1",
     "jquery": "^3.1.1",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.4.1",
     "react-fontawesome": "^1.4.0",
     "react-modal": "^1.6.1"
