--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-chartjs": "^0.8.0",
+    "react-chartjs-2": "^1.6.0",
     "react-dom": "^15.4.1",
     "react-fontawesome": "^1.4.0",
     "react-modal": "^1.6.1"
